sort.baseball.SelectBaseball.scala.error
Compilation error:
SelectBaseball:56: error: ')' expected but '}' found.
} 
^